--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.64.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
