--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^7.8.2",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.13",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
